Made some css tweaks, images now cropped in a box. Still need to get cycle buttons working

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,9 +17,6 @@
                 <button id ="left-button">Left</button>
             </div>
             <div id = "center-box">
-                <div id="image-container">
-                <img id="muppet-image" src="./assets/kermit.jpg" alt="Kermit the Frog">
-                </div>
                 <div id="button-container">
                     <button id="kermit-button">Kermit</button>
                     <button id="animal-button">Animal</button>
@@ -26,6 +24,9 @@
                     <button id="beaker-button">Beaker</button>
                     <button id="chef-button">Swedish Chef</button>
                     <button id="pepe-button">Pepe</button>
+                </div>
+                <div id="image-container">
+                <img id="muppet-image" src="./assets/kermit.jpg" alt="Kermit">
                 </div>
             </div>
             <div id = "right-box">
